css/main.css
@import url('https://fonts.googleapis.com/css?family=Montserrat:200,400|Roboto&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

#particles-js {
    position: absolute;
    width: 100%;
    height: 100%;
}

.wrapper {
    display: flex;
    flex-direction: column;
    color: white;
    /* justify-content: space-between; */
    min-height: 100vh;
}

body {
    background-color: #000000;
    font-family: 'Roboto', sans-serif;
}

a {
    text-decoration: none;
}

ul.nav-ul {
    list-style-type: none;
    display: flex;
    padding: 4vh 2vh;
    justify-content: center;
}

li.nav-li {
    position: relative;
    list-style-type: none;
    margin: 0 4vw;
    font-size: 3.5vh;
    transition: 0.2s linear;
}

a.nav-link {
    display: block;
    color: #FFFFFF;
    opacity: 0.5;
    transition: 300ms;
    text-transform: uppercase;
    letter-spacing: 4px;
}

a.nav-link:hover {
    opacity: 1;
}

a.nav-link:hover:after {
    width: 100%;
}

nav {
    width: 100vw;
}

main {
    flex: 1;
    display: flex;
}

.heading-main {
    display: block;
    font-family: 'Montserrat', sans-serif;
    font-weight: 200;
    min-width: 100%;
    text-align: center;
    align-items: center;
    margin-top: -30px;
}

.word {
    font-size: 62px;
    display: inline;
}

.slogan {
    font-size: 20px;
    margin-top: -15px;
}

.main-date {
    font-size: 48px;
    font-weight: 200;
    margin-top: 50px;
}

.year {
    display: inline;
    font-size: 90px;
}

.logo-container {
    margin-bottom: -40px;
}

.logo {
    width: auto;
    height: 300px;
}

footer {
    padding: 20px;
    text-align: center;
}

.nav-ul .icon {
    display: none;
}


.content-container {
    width: 80vw;
    margin: 0 auto;
}

.page-heading {
    font-size: 68px;
    text-align: center;
}

.score-table {
    width: 80%;
    font-size: 24px;
    text-align: center;
    margin: 5vh auto 0 auto;
}
.score-table td {
    height: 50px;
    padding: 15px;
    text-align: left;
}

.score-table td:last-child {
    border-radius: 0px 10px 10px 0px;
}

.score-table td:first-child {
    border-radius: 10px 0px 0px 10px;
}

.score-table th {
    height: 50px;
    padding: 15px;
    text-align: left;
}

.score-table tr:nth-child(even) {
    background-color: #f2f2f2;
    color: black;
}

.result-container {
    width: 70%;
    margin: 0 auto;
}

.event-name {
    font-size: 40px;
}

ul.winners {
    margin-left: 25px;
    list-style-type: none;
}

ul.winners li {
    display: block;
}

span.winner-name {
    font-size: 25px;
    margin: 10px 0;
}

span.winner-points {
    margin-left: 20px;
    font-size: 25px;
    color: #dbdbdb;
}

.event-container {
    margin-top: 15px;
}

.schedule-container {
    width: 100%;
    margin: 5vh auto 0 auto;
}

.schedule-table {
    width: 100%;
    font-size: 24px;
    margin-top: 5vh;
    border-collapse: separate;
    border-spacing: 0 20px;
}

.schedule-table td {
    margin: 5vh 0;
}

.schedule-table td:last-child {
    text-align: center;
}

.convenor {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.event-post {
    font-family: 'Raleway', sans-serif;
    font-size: 20px;
}

.convenor img {
    height: 200px;
    width: 200px;
    border-radius: 50%;
    filter: grayscale(1);
}

.ann img {
    height: 200px;
    width: 200px;
    border-radius: 50%;
    filter: grayscale(1)
}

.co-convenor {
    display: flex;
    justify-content: space-around;
    margin-top: 5vh;
    text-align: center;
}

.container {
    display: inline-block;
    cursor: pointer;
  }

  .bar1, .bar2, .bar3 {
    width: 35px;
    height: 5px;
    background-color: #999;
    margin: 6px 0;
    transition: 0.4s;
  }

  .change .bar1 {
    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
    transform: rotate(-45deg) translate(-9px, 6px) ;
  }

  .change .bar2 {
    opacity: 0;
  }

  .change .bar3 {
    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
    transform: rotate(45deg) translate(-8px, -8px) ;
  }

nav {
    -webkit-transition: all 0.6s ease-out;
    -moz-transition: all 0.6s ease-out;
    -o-transition: all 0.6s ease-out;
    -ms-transition: all 0.6s ease-out;
    transition: all 0.6s ease-out;
    height: 100%;
}

.techie-link {
    margin: 3vh 0vh 3vh -10vh;
    letter-spacing: normal !important;
}

@media only screen and (max-width: 630px) {
    .co-convenor {
        flex-direction: column;
    }

    .co-convenor > .ann {
        margin: 2vh 0;
    }

    .schedule-container {
        width: 100%;
        margin: 5vh 0 0 0;
    }
    .schedule-table {
        width: 100%;
        font-size: 20px;
    }
    .result-container {
        margin-top: 4vh;
        width: 100%;
    }
    .event-name {
        font-size: 30px;
    }

    .score-table {
        font-size: 18px;
    }
    img.logo {
        height: 200px;
        width: 200px;
    }

    .page-heading {
        font-size: 42px;
        text-align: center;
    }

    .word {
        font-size: 42px;
    }

    .year {
        font-size: 60px;
    }

    .slogan {
        font-size: 16px;
        margin-top: 0;
    }

    .main-date {
        font-size: 30px;
    }

    ul.nav-ul{
      flex-direction: column;
      align-items: center;
    }

    .nav-ul li {
        display: none;
    }

    .nav-ul .icon {
        display: block;
    }

    li.nav-li{
      margin: 0;
      margin: 2vh 0;

    }
}

